[package]
name = "edge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.71"
byteorder = "1.4.3"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
